Fix sec vulnerabilities in old guava