@@ -20,7 +20,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 //
 group            = 'io.vantiq'
 archivesBaseName = 'vantiq-sdk'
-version          = '1.2.0'
+version          = '1.2.1'
 
 allprojects {
     sourceCompatibility = 1.8
@@ -33,7 +33,7 @@ repositories {
 
 ext {
     okhttpVersion = '4.12.0'
-    guavaVersion = '31.1-jre'
+    guavaVersion = '32.1.3-jre'
     gsonVersion = '2.10.1'
 }
 
@@ -45,6 +45,10 @@ dependencies {
     testCompile "com.squareup.okhttp3:mockwebserver:${okhttpVersion}"
     testCompile 'junit:junit:4.13.2'
     testCompile 'org.hamcrest:hamcrest-library:2.2'
+}
+
+tasks.withType(Test) {
+    jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
 }
 
 test {
